@@ -1,0 +1,48 @@
+---
+sidebar: sidebar
+permalink: biz-apps/SAP-index.html
+summary: Collection of SAP business application and SAP HANA database solutions
+keywords: netapp, solutions, SAP, HANA
+---
+
+= SAP Business Application and SAP HANA Database Solutions
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:table-stripes: odd
+:imagesdir: ./media/
+
+[.lead]
+NetApp has an extensive collection of technical reports, validated designs and solution briefs around solutions for SAP and SAP HANA.
+
+== SAP
+* Technical reports
+** https://www.netapp.com/us/media/tr-4746.pdf[SAP Applications on Microsoft Azure Using Azure NetApp Files]
+** https://www.netapp.com/us/media/tr-4757.pdf[SAP Applications on Microsoft Azure Using Cloud Volumes ONTAP]
+** https://www.netapp.com/us/media/tr-4018.pdf[Integrating NetApp Storage with SAP Landscape Management]
+** https://www.netapp.com/us/media/tr-4250.pdf[SAP with Oracle on UNIX and NFS with NetApp Clustered Data ONTAP]
+** https://www.netapp.com/us/media/tr-4467.pdf[SAP with Microsoft SQL Server on Windows Using Clustered Data ONTAP]
+
+== SAP HANA
+* Verified Architecture
+** https://www.netapp.com/us/media/nva-1147-design.pdf[SAP HANA on NetApp All SAN Array - Modern SAN, Data Protection, and Disaster Recovery]
+
+* Technical Reports
+** https://www.netapp.com/us/media/tr-4436.pdf[SAP HANA on NetApp All Flash FAS Systems with FCP Configuration Guide]
+** https://www.netapp.com/us/media/tr-4435.pdf[SAP HANA on NetApp All Flash FAS Systems with NFS Configuration Guide]
+** https://www.netapp.com/us/media/tr-4290.pdf[SAP HANA on NetApp FAS Systems with NFS Configuration Guide]
+** https://www.netapp.com/us/media/tr-4338.pdf[SAP HANA on FAS Systems with FCP Configuration Guide]
+** https://www.netapp.com/us/media/tr-4338.pdf[SAP HANA on VMware vSphere and NetApp FAS and All Flash FAS Systems]
+** https://www.netapp.com/us/media/tr-4667.pdf[Automating SAP System Copies Using the SnapCenter SAP HANA Plug-In]
+** https://www.netapp.com/us/media/tr-4614.pdf[SAP HANA Backup and Recovery with SnapCenter]
+** https://www.netapp.com/us/media/tr-4646.pdf[SAP HANA Disaster Recovery with Storage Replication]
+** https://www.netapp.com/us/media/tr-4719.pdf[SAP HANA System Replication, Backup and Recovery with SnapCenter]
+** https://www.netapp.com/us/media/tr-4313.pdf[SAP HANA Backup and Recovery Using Snap Creator]
+** https://www.netapp.com/us/media/tr-4711.pdf[SAP HANA Backup and Recovery Using NetApp Storage and Commvault Software]
+** https://www.netapp.com/us/media/tr-4821.pdf[SAP HANA on IBM Power Systems and NetApp AFF Systems with NFS]
+
+* Solution Briefs
+** https://www.netapp.com/us/media/sb-3978.pdf[SAP HANA Lifecycle Management]
+** https://www.netapp.com/us/media/sb-3965.pdf[SAP HANA Backup & Recovery]
+** https://www.netapp.com/us/media/sb-3968.pdf[SAP HANA Disaster Recovery] 
