@@ -2,17 +2,18 @@ section: biz-apps
 title: Business Applications
 entries:
   - title: SAP
-    entries:
-      - title: SAP Applications on Microsoft Azure Using Azure NetApp Files
-        url: https://www.netapp.com/us/media/tr-4746.pdf
-      - title: SAP Applications on Microsoft Azure Using Cloud Volumes ONTAP
-        url: https://www.netapp.com/us/media/tr-4757.pdf
-      - title: Integrating NetApp Storage with SAP Landscape Management
-        url: https://www.netapp.com/us/media/tr-4018.pdf
-      - title: SAP with Oracle on UNIX and NFS with NetApp Clustered Data ONTAP
-        url: https://www.netapp.com/us/media/tr-4250.pdf
-      - title: SAP with Microsoft SQL Server on Windows Using Clustered Data ONTAP
-        url: https://www.netapp.com/us/media/tr-4467.pdf
+    url: /biz-apps/SAP-index.html
+#    entries:
+#      - title: SAP Applications on Microsoft Azure Using Azure NetApp Files
+#        url: https://www.netapp.com/us/media/tr-4746.pdf
+#      - title: SAP Applications on Microsoft Azure Using Cloud Volumes ONTAP
+#        url: https://www.netapp.com/us/media/tr-4757.pdf
+#      - title: Integrating NetApp Storage with SAP Landscape Management
+#        url: https://www.netapp.com/us/media/tr-4018.pdf
+#      - title: SAP with Oracle on UNIX and NFS with NetApp Clustered Data ONTAP
+#        url: https://www.netapp.com/us/media/tr-4250.pdf
+#      - title: SAP with Microsoft SQL Server on Windows Using Clustered Data ONTAP
+#        url: https://www.netapp.com/us/media/tr-4467.pdf
   - title: Microsoft
     entries:
   - title: Oracle
