@@ -2,39 +2,40 @@ section: ent-db
 title: Enterprise Database
 entries:
   - title: SAP HANA
-    entries:
-      - title: SAP HANA on NetApp All Flash FAS Systems with FCP Configuration Guide
-        url: https://www.netapp.com/us/media/tr-4436.pdf
-      - title: SAP HANA on NetApp All Flash FAS Systems with NFS Configuration Guide
-        url: https://www.netapp.com/us/media/tr-4435.pdf
-      - title: SAP HANA on NetApp FAS Systems with NFS Configuration Guide
-        url: https://www.netapp.com/us/media/tr-4290.pdf
-      - title: SAP HANA on FAS Systems with FCP Configuration Guide
-        url: https://www.netapp.com/us/media/tr-4338.pdf
-      - title: SAP HANA on VMware vSphere and NetApp FAS and All Flash FAS Systems
-        url: https://www.netapp.com/us/media/tr-4338.pdf
-      - title: Automating SAP System Copies Using the SnapCenter SAP HANA Plug-In
-        url: https://www.netapp.com/us/media/tr-4667.pdf
-      - title: SAP HANA Backup and Recovery with SnapCenter
-        url: https://www.netapp.com/us/media/tr-4614.pdf
-      - title: SAP HANA Disaster Recovery with Storage Replication
-        url: https://www.netapp.com/us/media/tr-4646.pdf
-      - title: SAP HANA System Replication, Backup and Recovery with SnapCenter
-        url: https://www.netapp.com/us/media/tr-4719.pdf
-      - title: SAP HANA Backup and Recovery Using Snap Creator
-        url: https://www.netapp.com/us/media/tr-4313.pdf
-      - title: SAP HANA Backup and Recovery Using NetApp Storage and Commvault Software
-        url: https://www.netapp.com/us/media/tr-4711.pdf
-      - title: SAP HANA on IBM Power Systems and NetApp AFF Systems with NFS
-        url: https://www.netapp.com/us/media/tr-4821.pdf
-      - title: SAP HANA Lifecycle Management
-        url: https://www.netapp.com/us/media/sb-3978.pdf
-      - title: SAP HANA Backup & Recovery
-        url: https://www.netapp.com/us/media/sb-3965.pdf
-      - title: SAP HANA Disaster Recovery
-        url: whttps://ww.netapp.com/us/media/sb-3968.pdf
-      - title: SAP HANA on NetApp All SAN Array - Modern SAN, Data Protection, and Disaster Recovery
-        url: https://www.netapp.com/us/media/nva-1147-design.pdf
+    url: /biz-apps/SAP-index.html
+#    entries:
+#      - title: SAP HANA on NetApp All Flash FAS Systems with FCP Configuration Guide
+#        url: https://www.netapp.com/us/media/tr-4436.pdf
+#      - title: SAP HANA on NetApp All Flash FAS Systems with NFS Configuration Guide
+#        url: https://www.netapp.com/us/media/tr-4435.pdf
+#      - title: SAP HANA on NetApp FAS Systems with NFS Configuration Guide
+#        url: https://www.netapp.com/us/media/tr-4290.pdf
+#      - title: SAP HANA on FAS Systems with FCP Configuration Guide
+#        url: https://www.netapp.com/us/media/tr-4338.pdf
+#      - title: SAP HANA on VMware vSphere and NetApp FAS and All Flash FAS Systems
+#        url: https://www.netapp.com/us/media/tr-4338.pdf
+#      - title: Automating SAP System Copies Using the SnapCenter SAP HANA Plug-In
+#        url: https://www.netapp.com/us/media/tr-4667.pdf
+#      - title: SAP HANA Backup and Recovery with SnapCenter
+#        url: https://www.netapp.com/us/media/tr-4614.pdf
+#      - title: SAP HANA Disaster Recovery with Storage Replication
+#        url: https://www.netapp.com/us/media/tr-4646.pdf
+#      - title: SAP HANA System Replication, Backup and Recovery with SnapCenter
+#        url: https://www.netapp.com/us/media/tr-4719.pdf
+#      - title: SAP HANA Backup and Recovery Using Snap Creator
+#        url: https://www.netapp.com/us/media/tr-4313.pdf
+#      - title: SAP HANA Backup and Recovery Using NetApp Storage and Commvault Software
+#        url: https://www.netapp.com/us/media/tr-4711.pdf
+#      - title: SAP HANA on IBM Power Systems and NetApp AFF Systems with NFS
+#        url: https://www.netapp.com/us/media/tr-4821.pdf
+#      - title: SAP HANA Lifecycle Management
+#        url: https://www.netapp.com/us/media/sb-3978.pdf
+#      - title: SAP HANA Backup & Recovery
+#        url: https://www.netapp.com/us/media/sb-3965.pdf
+#      - title: SAP HANA Disaster Recovery
+#        url: https://www.netapp.com/us/media/sb-3968.pdf
+#      - title: SAP HANA on NetApp All SAN Array - Modern SAN, Data Protection, and Disaster Recovery
+#        url: https://www.netapp.com/us/media/nva-1147-design.pdf
   - title: Oracle Database
     entries:
       - title: SAP with Oracle on UNIX and NFS with NetApp Clustered Data ONTAP 
