@@ -17,7 +17,7 @@ sidebar:
 
 homepage:
   tiles:
-    - title: Fred
+    - title: AI & Modern Data Analytics
       links:
         - title: "What's New"
           summary: Check out the latest AI and Modern Data Analytics solutions
