@@ -19,6 +19,8 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 02/03/2021 | SAP, SAP HANA | Added landing page for all SAP and SAP HANA content
+| 02/01/2021 | VDI with NetApp VDS | Added content for GPU nodes
 | 01/06/2021 | NetApp AI | New solution: NetApp ONTAP AI with NVIDIA DGX A100 Systems and Mellanox Spectrum Ethernet Switches (Design and Deployment)
 | 01/05/2021 | NetApp HCI with Cisco ACI | Update: Outline NDE Easy Scale procedure for VMware deployments
 | 12/22/2020 | NetApp Solutions | Initial release of NetApp Solutions repository
